--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "emitDecoratorMetadata": true,
     "declaration": true
   },
-  "include": ["src/**/*.ts",
+  "include": [
+    "src/**/*.ts",
     "src/test/*.*"
   ],
   "exclude": [
